# leftshiftSRE-AGENT

./: .gitignore  LICENSE  README.md
context-engine/: pyproject.toml
context-engine/mock/: incidents.json  otel_mapping.yaml  service_metrics.json
context-engine/src/relic/: __init__.py  cli.py  graph.py  otel_mapper.py  parser.py  risk.py  server.py  spl_query_gen.py  splunk_client.py
context-engine/src/relic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
demo-services/: docker-compose.yml
demo-services/.ctx/: repo.ctx
demo-services/data/: sample_incidents.json  sample_logs.json
demo-services/gateway/: main.py
demo-services/inventory_service/: Dockerfile  main.py  requirements.txt
demo-services/order_service/: main.py
demo-services/payment_service/: Dockerfile  main.py  requirements.txt
docs/: 01_PROJECT_PLAN.md  02_ARCHITECTURE.md  03_SPECIFICATION.md  04_SPLUNK_SETUP.md  05_DEFERRED_FEATURES.md  06_SYSTEM_ARCHITECTURE.md  07_GOALS_AND_ALIGNMENT.md
relic/: README.md  hec_config.yaml  otel-collector-config.yaml  requirements.txt
relic-vscode/: package-lock.json  package.json
relic-vscode/src/: chatProvider.ts  config.ts  extension.ts  impactProvider.ts  mcpClient.ts  riskProvider.ts
relic/demo/: analyze.py
relic/saved_searches/: errors_by_service.spl  incidents_for_service.spl  latency_p99_by_service.spl  metric_forecast.spl  risk_score_for_nodes.spl  risk_score_hourly.spl
relic/scripts/: burst_test.py  seed_kvstore.py
relic/server/: catalog.py  graph.py  kvstore_mapper.py  main.py  mock_splunk.py  risk.py  (+1 more)
